src/css/pages/home.scss
/* ... */
.hero {
  background: linear-gradient(
    180deg,
    transparentize($tuf-color-secondary ,0) 0%,
    transparentize($tuf-color-primary, 0) 80%
  );

  .speckle {
    .speck--square-6x6 {
      top: 32%;
      left: 9%;

      @media only screen and (min-width: rem(768)) {
        top: 32%;
        left: 6%;
      }

      @media only screen and (min-width: rem(1024)) {
        top: 57%;
        left: 4%;
      }
    }

    .speck--diamond-outline {
      top: 60%;
      right: -7%;

      @media only screen and (min-width: rem(1024)) {
        top: 21%;
        right: 16%;
      }
    }
  }

  &__content {
    position: relative;
    display: flex;

    flex-direction: column;

    justify-content: space-between;

    width: 100%;
    min-height: rem(530);

    margin-top: rem(108);

    @media (min-width: rem(768)) {
      flex-direction: row;
    }

    @media (min-width: rem(1024)) {
      margin-top: rem(162);
    }
  }

  &__bg {
    position: absolute;
    top: 50%;
    left: 50%;

    max-width: rem(280);

    transform: translate(-50%, -50%);

    @media (min-width: rem(768)) {
      max-width: rem(380);
    }

    @media (min-width: rem(1024)) {
      max-width: rem(465);
    }
  }

  &__cta {
    margin-top: rem(60);
    text-align: center;

    @media (min-width: rem(768)) {
      margin-top: rem(120);
      font-size: rem(30);
    }
  }

  &__cta__link {
    display: inline-block;
  }

  &__header {
    position: relative;
    font-size: rem(40);

    line-height: 1.25;

    max-width: rem(542);

    color: $tuf-color-white;

    margin-top: 0;

    @media only screen and (min-width: rem(1024)) {
      max-width: rem(640);
      font-size: rem(60);
      margin-top: rem(90);
    }

    @media only screen and (min-width: rem(1200)) {
      font-size: rem(80);
      margin-top: rem(104);
    }
  }

  &__footnote {
    position: relative;
    display: flex;

    flex-direction: column;

    justify-content: flex-end;

    margin-bottom: 0;

    color: $tuf-color-white;

    font-size: rem(16);

    font-weight: $tuf-font-weight-light;

    line-height: 1.5;

    @media only screen and (min-width: rem(768)) {
      font-size: rem(18);
    }

    @media only screen and (min-width: 1024px) {
      max-width: rem(252);
      font-size: rem(24);
      margin-bottom: rem(48);
    }

    &-highlight {
      color: $tuf-color-turqoise;

      font-size: rem(30);

      font-weight: $tuf-font-weight-bold;

      line-height: 1;

      @media only screen and (min-width: rem(768)) {
        font-size: rem(40);
      }

      @media only screen and (min-width: rem(1024)) {
        font-size: rem(60);

        margin-top: rem(16);
      }
    }
  }
}

.mission {
  display: flex;

  flex-direction: column;

  color: $tuf-color-white;

  line-height: 1.5;

  @media (min-width: rem(800)) {
    flex-direction: row;

    align-items: center;

    padding: 0;

    max-width: rem(768);
  }

  .speckle {
    .speck--diamond-dots-12x12 {
      top: -15%;
      left: -5%;

      @media screen and (min-width: rem(768)) {
        top: -15%;
        left: 23%;
      }

      @media screen and (min-width: rem(1024)) {
        top: -50%;
        left: -17.5%;
      }
    }

    .speck--ellipse-blue {
      top: 27%;
      right: 10%;

      @media screen and (min-width: rem(768)) {
        right: 12%;
      }

      @media screen and (min-width: rem(1024)) {
        top: -95%;
        right: 0;
      }
    }
  }

  &__title {
    position: relative;
    font-size: rem(30);
    flex-basis: 30%;

    margin: 0 auto;

    margin-bottom: rem(24);

    @media (min-width: rem(1024)) {
      margin: 0;
      font-size: rem(40);
    }
  }

  &__content {
    position: relative;
    flex-basis: 70%;
    font-size: rem(18);
    font-weight: $tuf-font-weight-light;

    padding: 0 rem(31);

    @media (min-width: rem(1024)) {
      margin-left: rem(32);
      padding: 0;

      font-size: rem(24);
    }
  }
}

.clients {
  $grid-size: rem(20);
  $grid-rows: 6;

  $grid-size-d: rem(40);
  $grid-rows-d: 4;

  &__carousel {
    position: relative;
  }

  &__carousel::before {
    display: block;
    content: '';

    width: 100%;

    margin-top: calc(#{$tuf-section-title} / 2.5 * -1);

    @media (min-width: $tuf-section-title-bp) {
      margin-top: calc(#{rem($tuf-section-title-d)} / 2.5  * -1);
    }
  }

  &__list,
  &__list-items,
  &__list-bg {
    width: 100%;
    height: calc((#{$grid-size} * #{$grid-rows}) + #{rem(1)});

    @media (min-width: rem(1024)) {
      height: calc((#{$grid-size-d} * #{$grid-rows-d}) + #{rem(1)});
    }
  }

  &__list-bg {
    position: absolute;

    bottom: 0;
    left: 50%;

    display: block;

    width: rem(1441);

    max-width: rem(1441);

    transform: translateX(-50%);

    background-size: $grid-size $grid-size;
    background-image:
      linear-gradient(to right, $tuf-color-card-border rem(1), transparent rem(1)),
      linear-gradient(to bottom, $tuf-color-card-border rem(1), transparent rem(1));


    @media (min-width: rem(1024)) {
      background-size: $grid-size-d $grid-size-d;
    }
  }

  &__list-item {
    display: flex;

    align-items: center;
    justify-content: center;

    img {
      width: auto;
      height: rem(60);

      @media (min-width: rem(1024)) {
        height: rem(80);
      }
    }
  }
}
/* ... */

